--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
 		"dev": "pnpm seedLocalD1 && wrangler dev",
 		"predeploy": "wrangler d1 migrations apply DB --remote",
 		"seedLocalD1": "wrangler d1 migrations apply DB --local"
+	},
+	"dependencies": {
+		"@cloudflare/puppeteer": "^1.0.4"
 	}
 }
